start looking at a bit of cmd level testing
