# svc/organisations/internal/api/doc/swagger.json
@@ -17,6 +17,31 @@
     "host": "organisations.stayaway.test",
     "basePath": "/api",
     "paths": {
+        "/v1/_probes/startup": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Probes"
+                ],
+                "summary": "Check is the app is listening",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "502": {
+                        "description": "Bad Gateway"
+                    },
+                    "504": {
+                        "description": "Gateway Timeout"
+                    }
+                }
+            }
+        },
         "/v1/municipalities": {
             "get": {
                 "consumes": [
